**** Changes ****

v2.2.2
------
 - fix: refresh cached instance of logged user at each request
 - new: added Entity.getAttributes() and Entity.getActions()
 - fix: don't log anything during Logger initialization
 - new: allows db user & password to be specified within the JDBC URL
 - new: added model.Entity.getColumnType(column)

v2.2.1 (September 2008)
------
 - fix: filters out requests towards login.do when already authentified in AuthenticationFilter
 - fix: EmailChecker smtp validation was broken
 - new: getAuthenticatedIndexPage() takes the http session as argument
 - fix: authentication filter now uses the overloadable getAuthenticatedIndexPage() method

v2.2 (September 2008)
----
 - fix: RowIterator.hasNext now works when called several times in a row
 - new: method velosurf.VelosurfTool.getDatabase() to ease the use of Velosurf from Java
 - fix: Attribute.getRows() had a memory leak
 - fix: Entity.fetch(Map) could fail without reason
 - fix: corrected a concurrency problem in statement pools
 - new: added an 'order' attribute to <exported-key>
 - new: method HttpQueryTool.getExtraKeys()
 - fix: compilation under java 1.6 now works
 - new: mail notifications (see Logger.java api)
 - new: caching attribute for entity attributes
 - fix: Instance.get(key) now takes an Object argument to propery inherit parent's generic getter
 - new: added the debugging method $query.queryString
 - new: url, driver and schema can now be part of <database> or of <credentials>
 - fix: populate last inserted IDs in instances when needed on insertion
 - new: Entity.extractColumnValues now allows additionnal columns when comming from the sql side
 - fix: HttpQueryTool needed a get(String) method besides the get(Object) one to properly override inherited generic getter
 - new: added an optional <credentials> element in the config file to gather credentials out of the <database> element
 - new: added method instance.setColumnValues
 - fix: cache key calculation was not always right